# fusion-hat

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  i2samp.sh  install.py  install.sh  pyproject.toml
backup/: adc.py  pwm copy 2.py  pwm copy.py  pwm.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  faq.rst  index.rst  install_i2s_for_speaker.rst  installation.rst  quick_user_guide.rst
docs/source/ai_interaction/: ai_interaction.rst  python_ai_assistant.rst  python_llm_ollama.rst  python_local_chatbot.rst  python_online_llms.rst  python_stt_vosk.rst  python_tts_espeak_pico2wave.rst  python_tts_piper_openai.rst
docs/source/api/: api.rst  api_adc.rst  api_adxl345.rst  api_basic.rst  api_buzzer.rst  api_dht11.rst  api_filedb.rst  api_grayscale.rst  api_i2c.rst  api_keypad.rst  api_lcd1602.rst  api_led_matrix.rst  api_motor.rst  api_mpu6050.rst  api_music.rst  api_pin.rst  api_pwm.rst  api_pwm_group.rst  api_rc522.rst  api_rgb.rst  api_rotary_encoder.rst  api_servo.rst  api_tts.rst  api_ultis.rst  api_ultrasonic.rst  fusion_hat._base.rst  fusion_hat._cli.rst  fusion_hat._config.rst  fusion_hat._i2c.rst  fusion_hat._logger.rst  fusion_hat._safe_shutdown.rst  fusion_hat._utils.rst  (+43 more)
driver/: Makefile  README.md  adc.c  basic_test.py  battery.c  button.c  dkms.conf  i2c.c  install.sh  led.c  main.c  main.h  pwm.c  shutdown.c  speaker.c  sunfounder-fusionhat-overlay.dts  test.sh
examples/: adc_read_test.py  device_info.py  device_info.py.py  gpio_even_test.py  gpio_event_test.py  gpio_input_test.py  gpio_output_test.py  llm_doubao_with_image.py  llm_local_with_image.py  llm_ollama.py  llm_ollama_with_image.py  llm_openai_with_image_stream.py  llm_test.py  local_voice_chatbot.py  microphone_test.py  motor_test.py  pwm_group_test.py  pwm_test.py  servo_sweep.py  servo_test.py  stt_test.py  stt_vosk_manual_download.py  stt_vosk_stream.py  stt_vosk_wake_word.py  stt_vosk_without_stream.py  tts_edge.py  tts_espeak.py  tts_openai.py  tts_openai_without_stream.py  tts_pico2wave.py  tts_piper.py  tts_piper_stream.py  tts_test.py  user_button.py  voice_assistant.py  vosk_test.py  ws2812_rgb_test.py
examples/modules_examples/: adxl345_read_test.py  buzzer_test.py  dht11_test.py  grayscale_module_test.py  keypad_read_test.py  lcd1602_test.py  led_matrix_test.py  mpu6050_read_test.py  rc522_read.py  rc522_write.py  rgb_led_test.py  rotary_encoder_test.py  spi_rgb_matrix_test.py  ultrasonic_read_test.py
fusion_hat/: GY87_test.py  __init__.py  _base.py  _cli.py  _config.py  _i2c.py  _safe_shutdown.py  _utils.py  _version.py  adc.py  audio_player.py  base.py  battery.py  bmp180.py  config.py  config_backup.py  device.py  gy87.py  i2c.py  keyboard_input.py  llm.py  logger.py  magnetometers.py  microphone.py  motor.py  music.py  pin.py  pwm.py  pwm_group.py  robot.py  safe_shutdown.py  script.py  servo.py  stt.py  tts.py  user_button.py  utils.py  voice_assistant.py
fusion_hat/magnetometer/: HMC5883L.py  QMC5883L.py  QMC5883P.py  QMC6310.py  __init__.py  mag_utils.py  magnetometers.py
fusion_hat/modules/: __init__.py  adxl345.py  buzzer.py  compass.py  dht11.py  grayscale_module.py  gy87.py  keypad.py  lcd1602.py  led_matrix.py  magnetometer.py  magnetometers.py  mpu6050.py  rc522.py  rgb_led.py  rotary_encoder.py  spi_rgb_matrix.py  ultrasonic.py
fusion_hat/scripts/: reset_audio.sh  setup_fusion_hat_audio.sh
fusion_hat/stt/: vosk.py
fusion_hat/tts/: __init__.py  espeak.py  openai_tts.py  pico2wave.py  piper.py  tts_engine.py
test/: device.py
tests/: adc_read_test.py  gpio_input_test.py
(+234 files in other folders)
