
[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusion_hat"
authors = [
  { name="sunfounder", email="service@sunfounder.com" },
]
description = "Fusion Hat Python library for Raspberry Pi"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
keywords = ["fusion_hat", "sunfounder"]
dynamic = ["version"]

dependencies = [
  "piper-tts",
  'openai',
]

[project.scripts]
fusion_hat = "fusion_hat.script:fusion_hat_cmd"
fusion_hat_safe_shutdown = "fusion_hat.safe_shutdown:__main__"

[project.urls]
Homepage = "https://www.sunfounder.com/products/sunfounder-fusionfusion-hat-expansion-board-designed-for-raspberry-pi"
Documentation = "https://docs.sunfounder.com/projects/fusion-hat/en/latest/"
Repository = "https://github.com/sunfounder/fusion-hat/tree/dev"
Issues = "https://github.com/sunfounder/fusion-hat/issues"
Changelog = "https://github.com/sunfounder/fusion-hat/commits/dev/"

[tool.setuptools.packages.find]
include = ["fusion_hat*"] # * means include all subpackages
exclude = ["docs", 'tests*', 'examples', 'bin', 'dtoverlays']

[tool.setuptools.dynamic]
version = {attr = "fusion_hat.version.__version__"}


